@@ -174,6 +174,9 @@ API Changes
     setters for both the default Resolution, and per-field Resolution.
     For backwards compatibility, DateField is still used if no Resolutions
     are specified. (Michael Busch via Chris Hostetter)
+
+15. Added isOptimized() method to IndexReader.
+    (Otis Gospodnetic)
     
 Bug fixes
 
